# grounded_git_mcp

./: .gitignore  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
.grounded_git_mcp/: audit.jsonl  confirmations.json
src/grounded_git_mcp/: server.py
src/grounded_git_mcp/core/: classification.py  confirmations.py  errors.py  git_runner.py  limits.py  models.py  parsers.py  paths.py  security.py
src/grounded_git_mcp/resources/: __init__.py  diff_range.py  file_at_ref.py  repo_tree.py
src/grounded_git_mcp/tools/: __init__.py  approval_flow.py  common.py  git_tools.py
tests/: conftest.py  test_approval_flow.py  test_error_handling.py  test_integration_dummy_repo.py  test_parsers.py  test_policy.py  test_schema_snapshots.py  test_security.py
